--- a/src/AppBundle/Resources/views/default/index.html.twig
+++ b/src/AppBundle/Resources/views/default/index.html.twig
@@ -1,5 +1,9 @@
 {% extends 'base.html.twig' %}
 
+{% block stylesheets %}
+    <link href="{{ asset('assets/css/bootstrap.min.css') }}" rel="stylesheet">
+{% endblock %}
+
 {% block body %}
     <div class="position-relative overflow-hidden p-3 p-md-5 m-md-3 text-center bg-light">
 
