--- a/web/assets/css/base.css
+++ b/web/assets/css/base.css
@@ -75,7 +75,7 @@
 body
 {
     /*background:url('https://images.pexels.com/photos/977603/pexels-photo-977603.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260');*/
-    background: url("../img/1.png");
-    background-repeat: repeat;
-    /*padding:10px;*/
+    /*background: url("../img/1.png");*/
+    /*background-repeat: repeat;*/
+    padding:10px;
 }
