--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -1,15 +1,22 @@
 <!doctype html>
 <html lang="en">
 <head>
+    <title>Esprit Entraide - {% block title %} Accueil {% endblock %}</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../../../../favicon.ico">
+    <link rel="icon" href="{{ asset('assets/favicon.png') }}">
     <!-- Bootstrap core CSS -->
     <link href="{{ asset('assets/bootstrap/css/bootstrap.css') }}" rel="stylesheet">
     <link href="{{ asset('assets/css/base.css') }}" rel="stylesheet">
-    <title>{% block title %}Welcome!{% endblock %}</title>
+    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+    <script>
+        (adsbygoogle = window.adsbygoogle || []).push({
+            google_ad_client: "ca-pub-8730686316513863",
+            enable_page_level_ads: true
+        });
+    </script>
     {% block stylesheets %}
     {% endblock %}
 </head>
@@ -20,22 +27,23 @@
 <nav class="navbar navbar-inverse">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#">Esprit Entraide</a>
+            <a style="color: red;font-weight: bold;" class="navbar-brand" href="#">Esprit Entraide</a>
         </div>
-        <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-        <script>
-            (adsbygoogle = window.adsbygoogle || []).push({
-                google_ad_client: "ca-pub-8730686316513863",
-                enable_page_level_ads: true
-            });
-        </script>
         <ul class="nav navbar-nav">
             <li ><a style="color:white;" href="{{ path('index') }}">Accueil</a></li>
-
-            <li ><a style="color:white;" class="collocation" href="#">Collocation</a></li>
+            <li class="dropdown">
+                <a style="color:white;" class="dropdown-toggle" data-toggle="dropdown" href="#">Permutations
+                    <!--<span class="caret"></span>--></a>
+                <ul class="dropdown-menu">
+                    <li><a href="{{ path('permutation_index') }}">Permutation entre spécialités</a></li>
+                    <li><a>Permutation entre classes (Coming Soon)</a></li>
+                </ul>
+            </li>
+            <li ><a style="color:white;" class="collocation" id="cl">Collocation</a></li>
         </ul>
         <ul style="float: right" class="nav navbar-nav ml-auto">
             {% if is_granted("ROLE_USER") %}
+                <li style="float: right"><a href="{{ path('fos_user_security_logout') }}"><strong> Déconnexion</strong></a></li>
                 <li style="float: right;"><a style="color:white; "><strong>Bonjour </strong> {{ app.user.firstname }} !</a></li>
             {% else %}
                 <a href="{{ path('fos_user_registration_register') }}" class="btn btn-primary navbar-btn">Connexion/Inscription</a>
@@ -55,6 +63,18 @@
         bg: '#55595c',
         fg: '#eceeef',
         text: 'Thumbnail'
+    });
+</script>
+<script language="JavaScript">
+    $('#cl').click(function () {
+        if($('#cl').html() === '<strong>Coming Soon !</strong>'){
+            $('#cl').html('Collocation');
+            $('#cl').css('color','white');
+        }
+        else{
+            $('#cl').html('<strong>Coming Soon !</strong>');
+            $('#cl').css('color','gold');
+        }
     });
 </script>
 {% block javascripts %}{% endblock %}
