--- a/src/AppBundle/Resources/views/default/register_login.html.twig
+++ b/src/AppBundle/Resources/views/default/register_login.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %} Connexion / Inscription {% endblock %}
+
     {% block stylesheets %}
         <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=Roboto:400,100,300,500">
         <link rel="stylesheet" href="{{ asset('assets/bootstrap/css/bootstrap.min.css') }}">
@@ -35,8 +37,8 @@
                     <div class="form-box">
                         <div class="form-top">
                             <div class="form-top-left">
-                                <h3>Login to our site</h3>
-                                <p>Enter username and password to log on:</p>
+                                <h3>Se connecter</h3>
+                                <p>Veuillez saisir votre email et mot de passe pour se connecter</p>
                             </div>
                             <div class="form-top-right">
                                 <i class="fa fa-key"></i>
@@ -69,8 +71,8 @@
                     <div class="form-box">
                         <div class="form-top">
                             <div class="form-top-left">
-                                <h3>Sign up now</h3>
-                                <p>Fill in the form below to get instant access:</p>
+                                <h3>Créer un compte</h3>
+                                <p>Veuillez remplir ce formulaire.</p>
                             </div>
                             <div class="form-top-right">
                                 <i class="fa fa-pencil"></i>
