--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -163,43 +163,16 @@
                     <!--Tabs -->
                     <div class="sign-in-form style-1">
 
-                        <ul class="tabs-nav">
-                            <li class=""><a href="#tab1">Log In</a></li>
-                            <li><a href="#tab2">Register</a></li>
+                        <ul id="typical_tabs_nav" class="tabs-nav">
+                            <li class=""><a href="#tab1">Connexion</a></li>
+                            <li><a href="#tab2">Inscription</a></li>
                         </ul>
 
                         <div class="tabs-container alt">
 
                             <!-- Login -->
                             <div class="tab-content" id="tab1" style="display: none;">
-                                <form method="post" class="login">
-
-                                    <p class="form-row form-row-wide">
-                                        <label for="username">Username:
-                                            <i class="im im-icon-Male"></i>
-                                            <input type="text" class="input-text" name="username" id="username" value="" />
-                                        </label>
-                                    </p>
-
-                                    <p class="form-row form-row-wide">
-                                        <label for="password">Password:
-                                            <i class="im im-icon-Lock-2"></i>
-                                            <input class="input-text" type="password" name="password" id="password"/>
-                                        </label>
-                                        <span class="lost_password">
-										<a href="#" >Lost Your Password?</a>
-									</span>
-                                    </p>
-
-                                    <div class="form-row">
-                                        <input type="submit" class="button border margin-top-5" name="login" value="Login" />
-                                        <div class="checkboxes margin-top-10">
-                                            <input id="remember-me" type="checkbox" name="check">
-                                            <label for="remember-me">Remember Me</label>
-                                        </div>
-                                    </div>
-
-                                </form>
+                                {{ include('@FOSUser/Security/login_content.html.twig') }}
                             </div>
 
                             <!-- Register -->
