--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -11,7 +11,7 @@
     ================================================== -->
     <link rel="stylesheet" href="{{ asset('assets/css/style.css') }}">
     <link rel="stylesheet" href="{{ asset('assets/css/colors/main.css') }}">
-
+    {% block stylesheets %}{% endblock %}
 </head>
 
 <body>
